# opensips-experiment

./: Cargo.toml  build.rs  opensips_bindings.h
opensips-bindings/: Cargo.toml  build.rs
opensips-bindings/src/: command.rs  lib.rs  module_parameter.rs
src/: chatgpt.rs  formatter.rs  lib.rs
