[package]
name = "rust-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.163", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.96", default-features = false, features = ["std"] }
tokio = { version = "1.28.0", default-features = false, features = ["io-util", "net", "rt", "macros", "fs", "sync", "time"] }

[build-dependencies]
bindgen = "0.65.1"
