[package]
name = "rust-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
opensips = { package = "opensips-bindings", path = "opensips-bindings" }
reqwest = { version = "0.11.17", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1.0.163", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.96", default-features = false, features = ["std"] }
time = { version = "0.3.21", default-features = false, features = ["macros"] }
tokio = { version = "1.28.0", default-features = false, features = ["io-util", "net", "rt", "macros", "fs", "sync", "time"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
tracing-core = { version = "0.1.31", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "time"] }
